# atos

./: .gitignore  .pre-commit-config.yaml  README.md  setup_venv.sh
backend/: .coverage  .env  README.md  pyproject.toml
backend/src/atos_api/: main.py  version.py
backend/src/atos_api/api/: router.py
backend/src/atos_api/api/routes/: health.py  system.py
backend/src/atos_api/core/: config.py
backend/src/atos_api/schemas/: system.py
backend/src/atos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_health.py  test_version.py
