[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atos-backend"
version = "0.1.0"
description = "Backend API for Aston Task Orchestrator System"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<3.0",
    "pre-commit>=4.0,<5.0",
    "pytest>=8.3,<10.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.15,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--import-mode=importlib",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
show_error_codes = true
warn_unreachable = true
pretty = true

[tool.coverage.run]
branch = true
source = ["atos_api"]

[tool.coverage.report]
show_missing = true
fail_under = 80